# ros_giuaky

./: README.md
carlike/: CMakeLists.txt  carlike_world.world  frames_2026-04-21_22.40.47.gv  package.xml
carlike/carlike_world/: model.config  model.sdf
carlike/config/: joint_controllers.yaml
carlike/launch/: gz_robot.launch.py
carlike/log/: latest_build
carlike/meshes/: arm_link1.STL  arm_link2.STL  base_link.STL  camera_link.STL  end_effector_link.STL  front_left_wheel_link.STL  front_right_wheel_link.STL  left_steering_link.STL  lidar_link.STL  rear_left_wheel_link.STL  rear_right_wheel_link.STL  right_steering_link.STL
carlike/rviz/: robot.rviz
carlike/scripts/: ackermann_teleop.py
carlike/urdf/: car_like_description.urdf
